--- a/Mail Man/Mail Man/ClientMenu.xaml
+++ b/Mail Man/Mail Man/ClientMenu.xaml
@@ -7,7 +7,9 @@
         mc:Ignorable="d"
         Title="ClientMenu" Height="600" Width="1100" ResizeMode="NoResize">
     <Grid Background="#FF1A1A1A">
-        <Border BorderBrush="#FF1B1818" BorderThickness="1" Background="#FF181615" Panel.ZIndex="-10" Margin="0,0,900,0"/>
+        <Border BorderBrush="#FF1B1818" BorderThickness="1" Background="#FF181615" Panel.ZIndex="-10" Margin="0,0,900,0">
+            <Button x:Name="logout_btn" Content="Log out" Margin="0,471,-1,59" Background="#FF181615" BorderBrush="#FF181615" Foreground="#FFFF7B00" FontSize="14" FontWeight="Bold" FontFamily="Arial Rounded MT Bold"/>
+        </Border>
         <Button x:Name="btn_home" Content="Home" HorizontalAlignment="Left" Margin="10,24,0,0" VerticalAlignment="Top" Height="72" Width="180" Foreground="#FFFF7B00" FontSize="20" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" FontWeight="Bold" Background="#FF181615" BorderBrush="#FF181615" Click="btn_home_Click"/>
         <Button x:Name="btn_report" Content="Report of orders" HorizontalAlignment="Left" VerticalAlignment="Top" Height="69" Width="180" Click="btn_report_Click" Foreground="#FFFF7B00" Background="#FF181615" BorderBrush="#FF181615" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="Bold" Margin="10,101,0,0" />
         <TextBlock HorizontalAlignment="Left" Margin="50,542,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontFamily="MV Boli"><Run Text="Sobhan &amp; Kiarash"/><LineBreak/></TextBlock>
@@ -42,7 +44,8 @@
             <TextBlock HorizontalAlignment="Left" Margin="45,36,0,0" TextWrapping="Wrap" Text="Order ID" VerticalAlignment="Top" Height="38" Width="143" Foreground="#FF3C8223" FontSize="24"/>
 
         </Grid>
-        <Grid x:Name="grid_wallet" Margin="205,0,0,0" Visibility="Visible">
+
+        <Grid x:Name="grid_wallet" Margin="205,0,0,0" Visibility="Collapsed">
             <TextBlock x:Name="wallet_txtblock" HorizontalAlignment="Left" Margin="26,26,0,506" TextWrapping="Wrap" Width="158" FontSize="36">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -95,6 +98,61 @@
             <TextBox x:Name="Password" HorizontalAlignment="Left" Margin="394,200,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" Height="56" Foreground="#FFFF7B00" BorderBrush="#FF1A1A1A" Background="Black" TextChanged="Password_TextChanged"/>
             <Label x:Name="lblPassword" HorizontalAlignment="Left" Margin="394,258,0,0" FontSize="18" VerticalAlignment="Top" Width="272" Foreground="Red" Height="58" HorizontalContentAlignment="Center"></Label>
 
+        </Grid>
+        <Grid Margin="205,10,10,0">
+            <ComboBox x:Name="packagecontent_dropbox_information" HorizontalAlignment="Left" Margin="36,227,0,0" VerticalAlignment="Top" Width="235" IsDropDownOpen="True"  Height="42" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" Background="#FF181615">
+                <CheckBox Content="Object"/>
+                <CheckBox Content="Document"/>
+                <CheckBox Content="breackable"/>
+            </ComboBox>
+            <CheckBox x:Name="expensive_checkbox_information" Content="Expensive" HorizontalAlignment="Left" Margin="36,349,0,0" VerticalAlignment="Top" Height="33" Width="234" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
+            <ComboBox x:Name="whichModel_dropbox_information" HorizontalAlignment="Left" Margin="627,342,0,0" VerticalAlignment="Top" Width="209" Height="40" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00" Background="#FF181615">
+                <CheckBox Content="usuall"/>
+                <CheckBox Content="VIP"/>
+            </ComboBox>
+            <TextBlock x:Name="weigh_txtblock_information" HorizontalAlignment="Left" Margin="627,162,0,0" TextWrapping="Wrap" Text="Weigh" VerticalAlignment="Top" Height="52" Width="117" FontSize="24">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <TextBlock x:Name="reciever_txtblock_information" HorizontalAlignment="Left" Margin="627,31,0,0" TextWrapping="Wrap" Text="Reciever" VerticalAlignment="Top" Height="52" Width="117" FontSize="24">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <TextBlock x:Name="sender_txtblock_information" HorizontalAlignment="Left" Margin="36,31,0,0" TextWrapping="Wrap" Text="Sender" VerticalAlignment="Top" Height="52" Width="118" FontSize="24">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <TextBlock x:Name="Type_txtblock_information" HorizontalAlignment="Left" Margin="627,287,0,0" TextWrapping="Wrap" Text="Type" VerticalAlignment="Top" Height="50" Width="209" FontSize="24">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <TextBlock x:Name="packagecontent_txtblock_information" HorizontalAlignment="Left" Margin="36,167,0,0" TextWrapping="Wrap" Text="Package Content" VerticalAlignment="Top" Height="52" Width="235" FontSize="24">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <Label x:Name="sender_lbl_information" Content="Label" HorizontalAlignment="Left" Margin="36,100,0,0" VerticalAlignment="Top" Height="62" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00"/>
+            <Label x:Name="reciever_lbl__information" Content="Label" HorizontalAlignment="Left" Margin="627,100,0,0" VerticalAlignment="Top" Height="62" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00"/>
+            <Label x:Name="weigh_lbl_information" Content="Label" HorizontalAlignment="Left" Margin="627,215,0,0" VerticalAlignment="Top" Height="54" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00" />
         </Grid>
 
 
