--- a/Mail Man/Mail Man/signupClient.xaml
+++ b/Mail Man/Mail Man/signupClient.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Mail_Man"
         mc:Ignorable="d"
-        Title="signupClient"  Height="450" Width="800" Background="#FF181615" ResizeMode="NoResize">
+        Title="signupClient"  Height="450" Width="800" Background="#FF181615" ResizeMode="NoResize" Icon="/PostLogo.png">
     <Grid>
         <Grid Margin="232,10,232,10" Background="#FF1A1A1A">
             <TextBlock HorizontalAlignment="Center" Margin="0,375,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontFamily="MV Boli" Height="33"><Run Text="Sobhan &amp; Kiarash"/><LineBreak/><Run/></TextBlock>
