--- a/Mail Man/Mail Man/MainWindow.xaml
+++ b/Mail Man/Mail Man/MainWindow.xaml
@@ -104,9 +104,6 @@
             <TextBlock x:Name="txtblock_weigh" HorizontalAlignment="Left" Margin="56,328,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Weigh"/><LineBreak/><Run/></TextBlock>
             <TextBlock x:Name="txtblock_postType" HorizontalAlignment="Left" Margin="56,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Post Type"/><LineBreak/><Run/></TextBlock>
             <Button Content="Search&#xD;&#xA;" Margin="597,498,88,49" Background="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="30" FontFamily="Bahnschrift Condensed"/>
-            <TextBlock x:Name="pricePaid_txt" HorizontalAlignment="Center" Margin="0,242,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
-            <TextBlock x:Name="weigh_txt" HorizontalAlignment="Center" Margin="0,328,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
-            <TextBlock x:Name="personalID_txt" HorizontalAlignment="Center" Margin="0,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
             <TextBlock x:Name="txtblock_packagecontent" HorizontalAlignment="Left" Margin="56,148,0,0" TextWrapping="Wrap" Text="Package Content" VerticalAlignment="Top" Height="37" Width="218" FontSize="24">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -120,6 +117,9 @@
             <CheckBox x:Name="breack_checkbox_" Checked="breack_checkbox_Checked" Content="Breackable" HorizontalAlignment="Left" Margin="338,134,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="110"/>
             <CheckBox x:Name="doc_checkbox_" Checked="doc_checkbox_Checked" Content="Document" HorizontalAlignment="Left" Margin="338,162,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="110" RenderTransformOrigin="0.477,-0.194"/>
             <CheckBox x:Name="object_checkbox_" Checked="object_checkbox_Checked" Content="Object" HorizontalAlignment="Left" Margin="338,189,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="110"/>
+            <TextBox x:Name="personalID_txt" HorizontalAlignment="Center" Margin="0,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="218" Height="36"/>
+            <TextBox x:Name="pricePaid_txt" HorizontalAlignment="Center" Margin="0,256,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="218" Height="36"/>
+            <TextBox x:Name="weigh_txt" HorizontalAlignment="Center" Margin="0,344,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="218" Height="32"/>
         </Grid>
 
         <Grid x:Name="grid_checkpackage" Grid.Column="1" Visibility="Collapsed" >
