--- a/Mail Man/Mail Man/ClientMenu.xaml
+++ b/Mail Man/Mail Man/ClientMenu.xaml
@@ -8,7 +8,7 @@
         Title="ClientMenu" Height="600" Width="1100" ResizeMode="NoResize">
     <Grid Background="#FF1A1A1A">
         <Border BorderBrush="#FF1B1818" BorderThickness="1" Background="#FF181615" Panel.ZIndex="-10" Margin="0,0,900,0">
-            <Button x:Name="logout_btn" Content="Log out" Margin="0,471,-1,59" Background="#FF181615" BorderBrush="#FF181615" Foreground="#FFFF7B00" FontSize="14" FontWeight="Bold" FontFamily="Arial Rounded MT Bold"/>
+            <Button x:Name="logout_btn" Click="logout_btn_Click" Content="Log out" Margin="0,471,-1,59" Background="#FF181615" BorderBrush="#FF181615" Foreground="#FFFF7B00" FontSize="14" FontWeight="Bold" FontFamily="Arial Rounded MT Bold"/>
         </Border>
         <Button x:Name="btn_home" Content="Home" HorizontalAlignment="Left" Margin="10,24,0,0" VerticalAlignment="Top" Height="72" Width="180" Foreground="#FFFF7B00" FontSize="20" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" FontWeight="Bold" Background="#FF181615" BorderBrush="#FF181615" Click="btn_home_Click"/>
         <Button x:Name="btn_report" Content="Report of orders" HorizontalAlignment="Left" VerticalAlignment="Top" Height="69" Width="180" Click="btn_report_Click" Foreground="#FFFF7B00" Background="#FF181615" BorderBrush="#FF181615" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="Bold" Margin="10,101,0,0" />
